vnet/Bicep_VNET_Dev.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualNetworks_Hub1_Spoke_A_name": {
      "type": "String"
    },
    "networkSecurityGroups_General_NSG_name": {
      "type": "String"
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2022-09-01",
      "name": "[parameters('networkSecurityGroups_General_NSG_name')]",
      "location": "eastus2",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_General_NSG_name'), 'AllowCidrBlockCustom8080Inbound')]"
      ],
      "properties": {
        "securityRules": [
          {
            "name": "AllowCidrBlockCustom8080Inbound",
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_General_NSG_name'), 'AllowCidrBlockCustom8080Inbound')]",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "description": "test",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "10.0.0.1/32",
              "destinationAddressPrefix": "10.50.0.4",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2022-09-01",
      "name": "[concat(parameters('networkSecurityGroups_General_NSG_name'), '/AllowCidrBlockCustom8080Inbound')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_General_NSG_name'))]"
      ],
      "properties": {
        "description": "test",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "8080",
        "sourceAddressPrefix": "10.0.0.1/32",
        "destinationAddressPrefix": "10.50.0.4",
        "access": "Allow",
        "priority": 100,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2022-09-01",
      "name": "[parameters('virtualNetworks_Hub1_Spoke_A_name')]",
      "location": "eastus2",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Hub1_Spoke_A_name'), 'General-1')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_General_NSG_name'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.50.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "General-1",
            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Hub1_Spoke_A_name'), 'General-1')]",
            "properties": {
              "addressPrefix": "10.50.0.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_General_NSG_name'))]"
              },
              "delegations": [],
              "privateEndpointNetworkPolicies": "Disabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            },
            "type": "Microsoft.Network/virtualNetworks/subnets"
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2022-09-01",
      "name": "[concat(parameters('virtualNetworks_Hub1_Spoke_A_name'), '/General-1')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Hub1_Spoke_A_name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_General_NSG_name'))]"
      ],
      "properties": {
        "addressPrefix": "10.50.0.0/24",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_General_NSG_name'))]"
        },
        "delegations": [],
        "privateEndpointNetworkPolicies": "Disabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      }
    }
  ]
}
